--- a/.babelrc
+++ b/.babelrc
@@ -13,6 +13,10 @@
     "plugins": [
         [
             "transform-class-properties", { "spec": true }],
-            "transform-object-rest-spread"
+            "transform-object-rest-spread",
+            ["transform-runtime", {
+                "polyfill": false,
+                "regenerator": true
+              }]
       ]
 }
