--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^1.5.0",
+    "@material-ui/lab": "^1.0.0-alpha.11",
     "axios": "^0.18.0",
     "babel-watch": "^2.0.7",
     "body-parser": "^1.18.3",
     "connected-react-router": "^4.4.1",
     "history": "^4.7.2",
+    "lodash": "^4.17.10",
     "mdi-material-ui": "^5.2.0",
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
     "prop-types": "^15.6.2",
+    "qs": "^6.5.2",
+    "rc-slider": "^8.6.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
@@ -36,6 +40,7 @@
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
