--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-watch server.js"
+    "start": "./node_modules/.bin/babel-watch server.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,8 +22,6 @@
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
     "prop-types": "^15.6.2",
-    "qs": "^6.5.2",
-    "rc-slider": "^8.6.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
