--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines" : {
+  "engines": {
     "node": "10.1.0",
     "npm": "5.6.0"
   },
@@ -17,14 +17,15 @@
     "@material-ui/core": "^1.5.0",
     "@material-ui/lab": "^1.0.0-alpha.11",
     "axios": "^0.18.0",
-    "babel-watch": "^2.0.7",
     "babel-core": "^6.26.3",
+    "babel-watch": "^2.0.7",
     "body-parser": "^1.18.3",
     "connected-react-router": "^4.4.1",
     "history": "^4.7.2",
     "lodash": "^4.17.10",
     "mdi-material-ui": "^5.2.0",
     "morgan": "^1.9.0",
+    "mysql2": "^1.6.1",
     "pg": "^7.4.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
