--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,13 @@
     "password": "ei9E4CScaWZ33SbfdX1aSiUsrU0aIhQr",
     "database": "yqwtmdwd",
     "host": "elmer.db.elephantsql.com",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "pool": {
+      "max": 5,
+      "min": 0,
+      "acquire": 30000,
+      "idle": 10000
+    }
   },
   "test": {
     "username": "root",
