--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "./node_modules/.bin/babel-watch server.js",
+    "dev": "./node_modules/.bin/babel-watch server.js",
     "heroku-postbuild": "webpack --config webpack.production.config.js" 
   },
   "author": "",
