--- a/config/config.json
+++ b/config/config.json
@@ -20,10 +20,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "yqwtmdwd",
+    "password": "ei9E4CScaWZ33SbfdX1aSiUsrU0aIhQr",
+    "database": "yqwtmdwd",
+    "host": "elmer.db.elephantsql.com",
+    "dialect": "postgres"
   }
 }
