--- a/.babelrc
+++ b/.babelrc
@@ -24,7 +24,11 @@
         "test": {
           "plugins": [
             "transform-class-properties",
-            "transform-object-rest-spread"
+            "transform-object-rest-spread",
+            ["transform-runtime", {
+                "polyfill": false,
+                "regenerator": true
+              }]
           ]
         }
     }
