--- a/config/config.json
+++ b/config/config.json
@@ -13,11 +13,11 @@
     }
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "yqwtmdwd",
+    "password": "ei9E4CScaWZ33SbfdX1aSiUsrU0aIhQr",
+    "database": "yqwtmdwd",
+    "host": "elmer.db.elephantsql.com",
+    "dialect": "postgres"
   },
   "production": {
     "username": "yqwtmdwd",
