--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mdi-material-ui": "^5.2.0",
     "morgan": "^1.9.0",
     "mysql2": "^1.6.1",
+    "nodemailer": "^4.6.8",
     "pg": "^7.4.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
